test/spec_vectors/i32/fail/module_24.wat
(module (func $type-binary-2nd-operand-empty-in-loop (i32.const 0) (loop (i32.const 0) (i32.add) (drop))))